[package]
name = "quadrs"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

[[bin]]
name = "quadrs"
path = "src/bin/quadrs.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
num-traits = "0.2"
poll-promise = "0.3"
regex = "1"
rustfft = "6"

egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

[features]
never = []

[profile.release]
lto = true
