[package]
name = "quadrs"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
anyhow = "1"
image = "0.24"
palette = "0.4"
regex = "1"
rustfft = "6"
rusttype = "0.8"

conrod_core = "0.70"
conrod_glium = "0.70"
conrod_winit = "0.70"
glium = "0.24"
winit = "0.19"

[dependencies.octagon]
path = "../octagon"
