[package]
name = "quadrs"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
anyhow = "1"
image = "0.24"
palette = "0.5"
regex = "1"
rustfft = "6"
rusttype = "0.9"

conrod_core = "0.76"
conrod_glium = "0.76"
conrod_winit = "0.76"
glium = "0.28"
winit = "0.23"

[dependencies.octagon]
path = "../octagon"

[features]
never = []
